Rework CommentBox component: -add handleRemoveAttachedFile function to facilitate the removal of attached files from postContent. -corrected the image source for user avatars in the rendered comments for better consistency. -Improved code readability and maintainability. -updated commentBox.css styling

--- a/src/components/commentBox/commentBox.css
+++ b/src/components/commentBox/commentBox.css
@@ -132,6 +132,7 @@
 .newCommentForm {
   display: flex;
   flex-direction: column;
+
 }
 
 .newCommentForm textarea {
@@ -149,68 +150,101 @@
 .addNewCommentButtonContainer {
   display: flex;
   justify-content: flex-end;
+
+}
+
+
+.newComment-headerContainer{
+
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+.newComment-headerContainer label{
+flex-grow: 2;
+}
+
+.header-attachedFiles{
+/* border: 2px solid orange; */
+
+  display: flex;
+  justify-content:flex-start;
+ 
+ flex-grow: 3;
+}
+.header-attachedFiles ul{
+
+ display: flex;
+ gap:0.7rem;
+ list-style-type: none;
+ flex-direction: column;
+
+}
+.header-attachedFiles ul li{
+
+position: relative;
+z-index: 100;
+display: flex;
+
+justify-content: flex-start;
+}
+.remove-attached-file{
+scale: 0.9;
+position: absolute;
+top:0px;
+left:104%;
+cursor: pointer;
+}
+.remove-attached-file:hover{
+  background-color: red;
+border-radius: 50%;
+z-index: 1;
+
+transition: all ease-in-out 0.1s;
 }
 
 /* NEW COMMENT INPUT FILE  */
 
 .file-input-container {
-  position: relative;
-  display: inline-block;
-  width: 200px;
-  height: 34px;
 
-  width: 100%;
+
+display: flex;
+flex-grow: 1;
+justify-content: flex-end;
+align-items: flex-start;
+gap:20px
+
 }
 
 .file-input {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  cursor: pointer;
+  display: none;
+
 }
 
-.file-input-label {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #704180;
-  color: #fff;
-  border-radius: 6px;
+.file-input-label{
+  cursor: pointer;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-  font-weight: 600;
-  padding: 10px;
-  transition: all 0.3s ease;
-  cursor: pointer;
+
+
+
+}
+.file-input-label:hover{
+
+transition: all ease-in 0.1s;
 }
 
-.file-input-label:hover {
-  background-color: #2f363d;
-}
 
-.file-input-label::before {
-  content: "\f093";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  margin-right: 10px;
-  font-size: 18px;
-}
 
-.file-input-label::after {
-  content: "Attach files";
-  margin-left: 10px;
-}
 
 .addNewCommentButtonContainer {
   margin-top: 20px;
+
+ display: flex;
+ justify-content: space-between;
 }
+
+
+
 .addNewCommentButtonContainer button {
   padding: 6px;
   cursor: pointer;
@@ -220,6 +254,8 @@
   background-color: rgb(74, 64, 163);
   transition: 0.1s ease;
   color: white;
+  min-height: 2.5rem;
+  max-height: 2.5rem;
 }
 
 .addNewCommentButtonContainer button:hover {
@@ -264,9 +300,16 @@
   border-radius: 5px;
   background: var(--dark-third);
 }
+
+#dark .newCommentForm{
+  box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.3);
+
+  padding: 10px 0px
+}
+
 #dark .newCommentForm textarea {
   width: 100%;
-  min-height: 120px;
+  min-height: 160px;
   padding: 3px;
   background-color: rgb(31, 35, 73);
   color: var(--dark-color);
@@ -279,7 +322,7 @@
 }
 #dark .newCommentForm textarea:focus {
   width: 100%;
-  min-height: 120px;
+
   padding: 3px;
   background-color: rgb(31, 35, 73);
   color: rgb(243, 243, 248);
